@@ -1,4 +1,6 @@
 
+from sqlalchemy import or_, func
+
 from zope.schema.vocabulary import SimpleTerm
 from z3c.sqlalchemy.mapper import MappedClassBase
 
@@ -23,8 +25,22 @@ utils.createAndRegisterSAMapper(
 
 class UserQuerySource(BaseQuerySource):
 
+    """Source for querying a database for user information.
+
+    This class adds an additional search clause to check for search terms
+    across a user's full name and customises the display of term titles
+    for research keywords."""
+
+
+    def extraClauses(self, query_string, exact=False):
+        """Return a concatenation search across user full names."""
+        if not exact:
+            return [func.lower(self.mapper_class.given_name+' '+self.mapper_class.surname).like('%%%s%%' % query_string)]
+
     def formatResult(self, result):
-        value = token = str(getattr(result, self.value_field))
+        """Return vocabulary term with suitably formatted title."""
+        value = str(getattr(result, self.value_field))
+        token = str(getattr(result, self.token_field))
         title = "%(salutation)s %(given_name)s %(surname)s (%(login_id)s)" % \
                 result.__dict__
         return SimpleTerm(value, token, title)
@@ -37,6 +53,6 @@ def UserQuerySourceFactory():
         value_field='login_id',
         token_field='uuid',
         title_field=None,
-        query_fields=['login_id','given_name','surname','email_alias'],
+        query_fields=['login_id','email_alias'],
         query_limit=5,
     )
